[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Debug/sprTrigger.png" type="Texture" id=1]
[ext_resource path="res://Scripts/scrTrigger.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_diffuse_mode = 1
params_specular_mode = 4
albedo_color = Color( 1, 1, 1, 0.627451 )
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 2, 2, 2 )

[node name="oTrigger" type="Area" groups=[
"Trigger",
]]
script = ExtResource( 2 )

[node name="triggerCol" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="triggerGuide" type="MeshInstance" parent="."]
layers = 2
cast_shadow = 0
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="triggerTween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_oTrigger_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_oTrigger_body_exited"]
